objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>AnnualProductValue__c</fullName>
        <label>Annual Product Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRV_One_Time__c</fullName>
        <description>Product Charge Type is One-Time, multiply the Total Price by 0.25.</description>
        <formula>CASE(
TEXT(ProductChargeType__c),"One-Time",TotalPrice * 0.25, 0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Commissionable Revenue Value for One Time products</inlineHelpText>
        <label>CRV One Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRV_Recurring_Multiplier__c</fullName>
        <description>Determines the multiplier for commission based on the contract term..</description>
        <formula>IF(WBN_2018_Commission__c=TRUE, 
 
/*Commission 2018 TRUE - NEW Rates*/ 
  (IF
    (Quantity &lt;12,
    0.75,
      IF (Quantity &gt;= 12,
        1,
        0)
    )),
/*Commission 2018 FALSE - OLD ONES */     
    IF (Quantity &lt;= 5, 0.8,
    /* greater than 5 */
        IF ((Quantity &gt;= 6 &amp;&amp; Quantity &lt;= 11),1,
    /*else greater than 12 */
            IF (Quantity &gt;= 12, 1.2,
      /*none of the above*/
                0)
      )
    )

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Commissionable Revenue Value Multiplier</inlineHelpText>
        <label>CRV Recurring Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRV_Recurring__c</fullName>
        <description>Product Charge Type is Recurring, multiply the Total Price by the Commission Recurring Multiplier.</description>
        <formula>IF(
ISPICKVAL(ProductChargeType__c,"Recurring"), 
UnitPrice *  CRV_Recurring_Multiplier__c,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Commissionable Revenue Value for Recurring products</inlineHelpText>
        <label>CRV Recurring</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ContractLength__c</fullName>
        <inlineHelpText>Use this for WBN Corporate Opportunities</inlineHelpText>
        <label>Contract Length (Mth)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Converted_to_Asset__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Converted to Asset?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fulfillment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fulfillment</label>
        <referenceTo>Fulfillment__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IncludeProductsSold__c</fullName>
        <formula>PricebookEntry.Product2.IncludeProductsSold__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Include Products Sold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Charge__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Would this product be considered part of an initial charge on the invoice</description>
        <inlineHelpText>For WBN IL Oppty - Check this box is this is an initial charge or is the first billable month of a PPC Schedule</inlineHelpText>
        <label>Initial Charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductCost__c</fullName>
        <label>Product Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProductDescriptionClient__c</fullName>
        <description>Client Facing Product Description</description>
        <inlineHelpText>Client Facing Product Description</inlineHelpText>
        <label>Product Description (Client)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ProductNameClient__c</fullName>
        <description>Client facing Product Name</description>
        <label>Product Name (Client)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <formula>PricebookEntry.Product2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <description>.</description>
        <formula>PricebookEntry.Product2.Description</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectedAdoptionEndDate__c</fullName>
        <label>Adoption End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProjectedAdoptionLengthMth__c</fullName>
        <formula>IF(NOT(ISBLANK(ProjectedAdoptionEndDate__c)) &amp;&amp; NOT(ISBLANK(ProjectedAdoptionStartDate__c))
     ,(((YEAR(ProjectedAdoptionEndDate__c) - YEAR(ProjectedAdoptionStartDate__c) - 1) *12) + (12 - MONTH(ProjectedAdoptionStartDate__c) +1) + MONTH(ProjectedAdoptionEndDate__c-5))
     , 0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Adoption Length (Mth)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectedAdoptionMonthlyValue__c</fullName>
        <label>Projected Adoption Monthly Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedAdoptionPct__c</fullName>
        <label>Projected Adoption %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ProjectedAdoptionStartDate__c</fullName>
        <label>Adoption Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Projected_Adoption_Total_Value__c</fullName>
        <label>Projected Adoption Total Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion</label>
        <referenceTo>Promotion__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TotalProductCost__c</fullName>
        <label>Total Product Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalProductValue__c</fullName>
        <label>Total Product Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WBN_2018_Commission__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If Close date is after 4/1 - check box and use 2018 commission</description>
        <inlineHelpText>If Close date is after 4/1 - check box and use 2018 commission</inlineHelpText>
        <label>WBN 2018 Commission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductChargeType__c</fullName>
        <label>Product Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ProductChargeType</valueSetName>
        </valueSet>
    </fields>
    <validationRules>
        <fullName>YBN_Contract_Length_Must_Be_Greater_0</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
Opportunity.RecordTypeId &lt;&gt; "012600000009YRT",
OR( 
NOT(ContractLength__c &gt; 0), 
ISBLANK(ContractLength__c), 
AND(
ContractLength__c &gt; 1, 
CONTAINS(Product2.Name, " Setup") 
) 
)
)</errorConditionFormula>
        <errorDisplayField>ContractLength__c</errorDisplayField>
        <errorMessage>Must be greater than zero. Place a value of one for "Setup" products.</errorMessage>
    </validationRules>
</CustomObject>